# Clara

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  session_name.session  validation_results.json
assets/: temp.json
data-pipeline/Tests/: temp.json
data-pipeline/database-functions/: connect.py  database-upload.py
data-pipeline/email-functions/: email-checker.py  email-reader.py
data_pipeline/: __init__.py
data_pipeline/Tests/: first_run.py  temp.json  test1.json  test2.json
data_pipeline/database_functions/: __init__.py  connect.py  database_upload.py
data_pipeline/email-functions/: email-checker.py  email-reader.py
data_pipeline/email_functions/: __init__.py  email_checker.py  email_listener.py  email_reader.py  email_sender.py
llm_engineering/: README.md  __init__.py
llm_engineering/application/: services.py
llm_engineering/infrastructure/: __init__.py  prompts.py
llm_engineering/infrastructure/schemas/: validation_schema.json
llm_engineering/model/: __init__.py  gemini_provider.py  operations.py
telegram_bot/: __init__.py  add_users.py  bot_permissions.py  bot_start.py  create_chat.py  create_connection.py  find_chat_id.py  group_exists.py  reply.py  send_messages.py  session_name.session  test1.py
telegram_bot/tests/: test1.py
telegram_bot_functions/: __init__.py  bot_start.py  reply.py
telegram_bot_functions/db/: conversation_utils.py
telegram_bot_functions/handlers/: reply.py
tests/: email.txt  first_run.py
tests_data_pipeline/: test_connect.py
tests_llm/: classif_response.py  classify_test.py  email2.txt  first_run.py  response.txt
tests_telegram/: full_run.py  session_name.session  test1.py  test_add_users.py  test_bot_permissions.py  test_create_chat.py  test_create_connection.py  test_group_exists.py  test_send_messages.py
