[tool.poetry]
name = "Clara"
version = "0.1.0"
description = "Clara is an AI-powered email management assistant that helps students understand respond to and manage emails from "
authors = ["Pablo Leyva <pleyva2004@gmail.com>"]
packages = [
    { include = "data-pipeline" }
]
s
[tool.poetry.dependencies]
python = "3.12"
google-genai = "^0.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"sssss
black = "^23.12.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 