[tool.poetry]
name = "Clara"
version = "0.1.0"
description = "Clara is an AI-powered email management assistant that helps students understand, respond to, and manage emails"
authors = ["Pablo Leyva <pleyva2004@gmail.com>"]
packages = [
    { include = "data-pipeline" }
]

[tool.poetry.dependencies]
python = "3.12.0"
google-genai = "^0.1.0"
python-dotenv = "^1.0.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.120.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 