[tool.poetry]
name = "Clara"
version = "0.1.0"
description = "Clara is an AI-powered email management assistant that helps students understand, respond to, and manage emails"
authors = ["Pablo Leyva <pleyva2004@gmail.com>"]
packages = [
    { include = "data-pipeline" }
]

[tool.poetry.dependencies]
python = ">=3.9.0"
google-genai = "^0.1.0"
python-dotenv = "^1.0.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.120.0"
mysql-connector-python = "^9.3.0"
imap-tools = "^1.10.0"
talon = "^1.4.4"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 